Ignore more filesz!

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-KVCoreDataKit.xcodeproj/*.perspectivev3
-KVCoreDataKit.xcodeproj/*.pbxuser
+*.perspectivev3
+/*.pbxuser
 build-ios/
 build-ios/*
 build-mac/
@@ -7,3 +7,4 @@ build-mac/*
 build/
 build/*
 .DS_Store
+/KVCoreDataKit.xcodeproj/kylevanessen.pbxuser
